# X5_python_school

./: README.md  setup.py
DZ1/: ANDREY_YABLOCHKIN.py
DZ2/homework2/: game.py  myowndz.py  test_is_game_finished.py  test_perform_move.py  test_shuffle_field.py  test_user_input.py
DZ3/: ANDREY.YABLOCHKIN.py  OOP_test.py
DZ4/homework4/: ANDREY.YABLOCHKIN.py  hw4.md
DZ5/: hw5.md
DZ5/todo/: commands.py  models.py  reflection.py  runtime.py
DZ6.1/: my_awesome_script.py  pyproject.toml
DZ7/: collect_data_log.txt  emails.csv  make_it_better.py  pyproject.toml
DZ7/users/1/: data.xml
DZ7/users/10/: data.xml
DZ7/users/2/: data.xml
DZ7/users/3/: data.xml
DZ7/users/5/: data.xml
DZ7/users/6/: data.xml
DZ7/users/7/: data.xml
DZ7/users/8/: data.xml
users/4/: data.xml
users/9/: data.xml
