[tool.poetry]
name = "dz6.1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygments = "^2.7.1"
pytz = "^2020.1"
cowpy = "^1.1.0"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
safety = "^1.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
